--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "~12.2.0",
     "@azure/msal-angular": "^2.0.2",
     "@azure/msal-browser": "^2.16.1",
+    "ag-grid-angular": "^26.1.0",
+    "ag-grid-community": "^26.1.0",
+    "angular-material-data-grid": "^0.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
