--- a/package.json
+++ b/package.json
@@ -10,33 +10,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.2",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.2",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@azure/msal-angular": "^2.0.2",
-    "@azure/msal-browser": "^2.16.1",
-    "ag-grid-angular": "^26.1.0",
-    "ag-grid-community": "^26.1.0",
-    "angular-material-data-grid": "^0.3.3",
+    "@angular/animations": "^12.2.14",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.14",
+    "@angular/compiler": "^12.2.14",
+    "@angular/core": "^12.2.14",
+    "@angular/forms": "^12.2.14",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "^12.2.14",
+    "@angular/platform-browser-dynamic": "^12.2.14",
+    "@angular/router": "^12.2.14",
+    "@azure/msal-angular": "^2.0.6",
+    "@azure/msal-browser": "^2.20.0",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.0",
+    "angular-material-data-grid": "^0.3.9",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
-    "@angular/cli": "~12.2.1",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "^12.2.14",
+    "@angular/cli": "^13.0.4",
+    "@angular/compiler-cli": "^12.2.14",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.37",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
