--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/compiler": "^13.0.3",
     "@angular/core": "^13.0.3",
     "@angular/forms": "^13.0.3",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.1.0",
     "@angular/platform-browser": "^13.0.3",
     "@angular/platform-browser-dynamic": "^13.0.3",
     "@angular/router": "^13.0.3",
@@ -25,6 +25,9 @@
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.0",
     "angular-material-data-grid": "^0.3.9",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
+    "jquery": "^3.6.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
     "rxjs": "~6.6.0",
