--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,9 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
+                        "allowedCommonJsDependencies": [
+                            "xlsx"
+                        ],
                         "outputPath": "dist/FGR-GRID-V2",
                         "index": "src/index.html",
                         "main": "src/main.ts",
