--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "angular-material-data-grid": "^0.3.9",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.17.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.4",
     "@angular/cli": "^13.0.4",
     "@angular/compiler-cli": "^13.0.3",
+    "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.37",
     "jasmine-core": "~3.8.0",
