--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-  "name": "fgr-grid-v2",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^13.0.3",
-    "@angular/cdk": "^13.1.0",
-    "@angular/common": "^13.0.3",
-    "@angular/compiler": "^13.0.3",
-    "@angular/core": "^13.0.3",
-    "@angular/forms": "^13.0.3",
-    "@angular/material": "^13.1.0",
-    "@angular/platform-browser": "^13.0.3",
-    "@angular/platform-browser-dynamic": "^13.0.3",
-    "@angular/router": "^13.0.3",
-    "@azure/msal-angular": "^2.0.6",
-    "@azure/msal-browser": "^2.20.0",
-    "ag-grid-angular": "^26.2.0",
-    "ag-grid-community": "^26.2.0",
-    "angular-material-data-grid": "^0.3.9",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
-    "file-saver": "^2.0.5",
-    "jquery": "^3.6.0",
-    "primeicons": "^5.0.0",
-    "primeng": "^13.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "xlsx": "^0.17.4",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.4",
-    "@angular/cli": "^13.0.4",
-    "@angular/compiler-cli": "^13.0.3",
-    "@types/file-saver": "^2.0.4",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.20.37",
-    "jasmine-core": "~3.8.0",
-    "karma": "^6.3.9",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "^4.4.2"
-  }
+    "name": "fgr-grid-v2",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --proxy-config proxy.conf.json",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^13.0.3",
+        "@angular/cdk": "^13.1.0",
+        "@angular/common": "^13.0.3",
+        "@angular/compiler": "^13.0.3",
+        "@angular/core": "^13.0.3",
+        "@angular/forms": "^13.0.3",
+        "@angular/material": "^13.1.0",
+        "@angular/platform-browser": "^13.0.3",
+        "@angular/platform-browser-dynamic": "^13.0.3",
+        "@angular/router": "^13.0.3",
+        "@azure/msal-angular": "^2.0.6",
+        "@azure/msal-browser": "^2.20.0",
+        "ag-grid-angular": "^26.2.0",
+        "ag-grid-community": "^26.2.0",
+        "angular-material-data-grid": "^0.3.9",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.7.2",
+        "file-saver": "^2.0.5",
+        "jquery": "^3.6.0",
+        "primeicons": "^5.0.0",
+        "primeng": "^13.0.2",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.3.0",
+        "xlsx": "^0.17.4",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^13.0.4",
+        "@angular/cli": "^13.0.4",
+        "@angular/compiler-cli": "^13.0.3",
+        "@types/file-saver": "^2.0.4",
+        "@types/jasmine": "~3.8.0",
+        "@types/node": "^12.20.37",
+        "jasmine-core": "~3.8.0",
+        "karma": "^6.3.9",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "typescript": "^4.4.2"
+    }
 }
