--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap-icons": "^1.7.2",
         "file-saver": "^2.0.5",
         "jquery": "^3.6.0",
+        "pdfmake": "^0.1.33",
         "primeicons": "^5.0.0",
         "primeng": "^13.0.2",
         "rxjs": "~6.6.0",
@@ -43,6 +44,7 @@
         "@types/file-saver": "^2.0.4",
         "@types/jasmine": "~3.8.0",
         "@types/node": "^12.20.37",
+        "@types/pdfmake": "^0.1.21",
         "jasmine-core": "~3.8.0",
         "karma": "^6.3.9",
         "karma-chrome-launcher": "~3.1.0",
