--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "bootstrap-icons": "^1.7.2",
         "file-saver": "^2.0.5",
         "jquery": "^3.6.0",
-        "pdfmake": "^0.1.33",
+        "mat-table-exporter": "^10.2.4",
+        "moment": "^2.29.3",
+        "pdfmake": "^0.1.50",
         "primeicons": "^5.0.0",
         "primeng": "^13.0.2",
         "rxjs": "~6.6.0",
