27.-Modulo usuarios OK

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jquery": "^3.6.0",
         "mat-table-exporter": "^10.2.4",
         "moment": "^2.29.3",
+        "ngx-spinner": "^13.1.1",
         "pdfmake": "^0.1.50",
         "primeicons": "^5.0.0",
         "primeng": "^13.0.2",
