--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
                             "src/styles.css",
                             "./node_modules/primeng/resources/primeng.css",
                             "./node_modules/primeicons/primeicons.css",
-                            "./node_modules/primeng/resources/primeng.min.css"
+                            "./node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
@@ -51,13 +52,13 @@
                         "production": {
                             "budgets": [{
                                     "type": "initial",
-                                    "maximumWarning": "4mb",
-                                    "maximumError": "5mb"
+                                    "maximumWarning": "15mb",
+                                    "maximumError": "25mb"
                                 },
                                 {
                                     "type": "anyComponentStyle",
-                                    "maximumWarning": "2kb",
-                                    "maximumError": "4kb"
+                                    "maximumWarning": "10mb",
+                                    "maximumError": "15mb"
                                 }
                             ],
                             "fileReplacements": [{
