--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-cool/storage": "^13.0.0",
         "@angular/animations": "^13.0.3",
         "@angular/cdk": "^13.1.0",
         "@angular/common": "^13.0.3",
