--- a/package.json
+++ b/package.json
@@ -23,20 +23,29 @@
         "@angular/router": "^13.0.3",
         "@azure/msal-angular": "^2.0.6",
         "@azure/msal-browser": "^2.20.0",
+        "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+        "@types/shelljs": "^0.8.11",
         "ag-grid-angular": "^26.2.0",
         "ag-grid-community": "^26.2.0",
         "angular-material-data-grid": "^0.3.9",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.7.2",
+        "chart.js": "^2.9.4",
         "file-saver": "^2.0.5",
         "jquery": "^3.6.0",
         "mat-table-exporter": "^10.2.4",
         "moment": "^2.29.3",
+        "ng-terminal": "^5.0.0",
+        "ng2-charts": "^2.4.2",
+        "ngx-childprocess": "^0.0.6",
         "ngx-spinner": "^13.1.1",
         "pdfmake": "^0.1.50",
         "primeicons": "^5.0.0",
         "primeng": "^13.0.2",
         "rxjs": "~6.6.0",
+        "shelljs": "^0.8.5",
+        "socket.io-client": "^4.5.2",
+        "sweetalert2": "^11.4.32",
         "tslib": "^2.3.0",
         "xlsx": "^0.17.4",
         "zone.js": "~0.11.4"
