--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
                             "./node_modules/primeng/resources/primeng.css",
                             "./node_modules/primeicons/primeicons.css",
                             "./node_modules/primeng/resources/primeng.min.css",
-                            "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+                            "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+                            "jsgantt-improved/dist/jsgantt.css"
                         ],
                         "scripts": [
                             "node_modules/chart.js/dist/Chart.min.js",
