--- a/package.json
+++ b/package.json
@@ -25,16 +25,22 @@
         "@azure/msal-browser": "^2.20.0",
         "@sweetalert2/ngx-sweetalert2": "^11.0.0",
         "@types/shelljs": "^0.8.11",
+        "@worktile/gantt": "^13.1.2",
         "ag-grid-angular": "^26.2.0",
         "ag-grid-community": "^26.2.0",
+        "angular-fusioncharts": "^4.0.0",
+        "angular-gantt": "^2.0.0-rc.1",
         "angular-material-data-grid": "^0.3.9",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.7.2",
         "chart.js": "^2.9.4",
         "file-saver": "^2.0.5",
+        "fusioncharts": "^3.19.0",
+        "html2canvas": "^1.4.1",
         "jquery": "^3.6.0",
         "mat-table-exporter": "^10.2.4",
         "moment": "^2.29.3",
+        "ng-gantt": "^2.5.0",
         "ng-terminal": "^5.0.0",
         "ng2-charts": "^2.4.2",
         "ngx-childprocess": "^0.0.6",
