--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.7.2",
         "chart.js": "^2.9.4",
+        "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "fusioncharts": "^3.19.0",
         "html2canvas": "^1.4.1",
@@ -54,13 +55,14 @@
         "sweetalert2": "^11.4.32",
         "tslib": "^2.3.0",
         "xlsx": "^0.17.4",
+        "xlsx-with-styles": "^0.17.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^13.0.4",
         "@angular/cli": "^13.0.4",
         "@angular/compiler-cli": "^13.0.3",
-        "@types/file-saver": "^2.0.4",
+        "@types/file-saver": "^2.0.5",
         "@types/jasmine": "~3.8.0",
         "@types/node": "^12.20.37",
         "@types/pdfmake": "^0.1.21",
